@@ -1335,18 +1335,30 @@ dwAssignAbbrev (dwtag *tp, void *info)
 /* dwWriteAbbrevs - write the abbreviations to the .debug_abbrev section */
 /*-----------------------------------------------------------------------*/
 static void
-dwWriteAbbrevs (void)
+dwWriteAbbrevs (int abbrevNum)
 {
   dwtag * tp;
   dwattr * ap;
   int key;
+  dwtag ** tptable = NULL;
+  int abbrev;
   
   tfprintf (dwarf2FilePtr, "\n\t!area\n", ".debug_abbrev (NOLOAD)");
   tfprintf (dwarf2FilePtr, "!slabeldef\n", "Ldebug_abbrev");
 
+  /* Sort the abbreviations by their abbreviation number so that   */
+  /* we can output them in this order. I don't see any requirement */
+  /* in the standard for this, but some things seem to assume it.  */
+  tptable = Safe_calloc (1+abbrevNum, sizeof(dwtag *));
   tp = hTabFirstItem (dwAbbrevTable, &key);
   for (; tp; tp = hTabNextItem (dwAbbrevTable, &key))
+    tptable[tp->abbrev] = tp;
+
+  for (abbrev=1; abbrev<=abbrevNum; abbrev++)
     {
+      tp = tptable[abbrev];
+      if (!tp) continue;
+
       dwWriteULEB128 (NULL, tp->abbrev, NULL);
       dwWriteULEB128 (NULL, tp->tag, NULL);
       dwWriteByte (NULL, tp->firstChild ? DW_CHILDREN_yes : DW_CHILDREN_no,
@@ -1364,6 +1376,7 @@ dwWriteAbbrevs (void)
     }
   dwWriteULEB128 (NULL, 0, NULL);
   
+  Safe_free (tptable);
   hTabDeleteAll (dwAbbrevTable);
 }
 
@@ -1407,6 +1420,9 @@ dwWriteTag (dwtag *tp, void *info)
 static void
 dwWriteTags (void)
 {  
+  if (!dwRootTag)
+    return;
+
   tfprintf (dwarf2FilePtr, "\n\t!area\n", ".debug_info (NOLOAD)");
   
   dwWriteWordDelta ("Ldebug_info_end", "Ldebug_info_start");
@@ -1418,11 +1434,14 @@ dwWriteTags (void)
   dwWriteWord ("Ldebug_abbrev", 0, NULL);
     
   dwWriteByte (NULL, port->debugger.dwarf.addressSize, NULL);
-    
-  dwTraverseTag (dwRootTag, dwWriteTag, NULL);
-  
-  dwWriteULEB128 (NULL, 0, NULL);
-  
+
+  // The root tag has no siblings and must not have an end-of-sibling-
+  // chain marker, so handle it separately and start the traversal with
+  // its children.
+  dwWriteTag (dwRootTag, NULL);
+  if (dwRootTag->firstChild)
+    dwTraverseTag (dwRootTag->firstChild, dwWriteTag, NULL);
+
   tfprintf (dwarf2FilePtr, "!slabeldef\n", "Ldebug_info_end");
 
 }
@@ -1969,6 +1988,7 @@ dwGenCFIins (int callsize, int id)
   dwcfop * op;
   int i;
   char s[32];
+  int padding;
   
   tfprintf (dwarf2FilePtr, "\n\t!area\n", ".debug_frame (NOLOAD)");
 
@@ -2031,6 +2051,14 @@ dwGenCFIins (int callsize, int id)
       }
 
   dwWriteCFAinstructions (ip);
+
+  //pad with NOPs if needed to maintain 32-bit alignment
+  padding = (4 - ((5 + dwSizeofCFAinstructions (ip)) & 3)) & 3;
+  while (padding)
+    {
+      dwWriteByte (NULL, DW_CFA_nop, NULL);
+      padding--;
+    }
   
   op = ip->first;
   while (op)
@@ -2050,9 +2078,12 @@ dwGenCFIins (int callsize, int id)
 static void
 dwWriteFDE (dwfde * fp, int id)
 {
+  int length = dwSizeofCFAinstructions(fp->ins) + 4
+               + port->debugger.dwarf.addressSize * 2;
+  int padding = (4 - (length & 3)) & 3;
+
   //length
-  dwWriteWord (NULL, dwSizeofCFAinstructions(fp->ins) + 4
-                + port->debugger.dwarf.addressSize * 2 , NULL);
+  dwWriteWord (NULL, length + padding , NULL);
 
   //CIE ptr
   char s[32];
@@ -2067,6 +2098,13 @@ dwWriteFDE (dwfde * fp, int id)
 
   //instructions
   dwWriteCFAinstructions (fp->ins);
+
+  //pad with NOPs if needed to maintain 32-bit alignment
+  while (padding)
+    {
+      dwWriteByte (NULL, DW_CFA_nop, NULL);
+      padding--;
+    }
 }
 
 static void
@@ -3233,7 +3271,7 @@ dwarf2FinalizeFile (FILE *of)
   dwTraverseTag (dwRootTag, dwAssignTagAddress, &tagAddress);
   
   /* Write the .debug_abbrev section */
-  dwWriteAbbrevs ();  
+  dwWriteAbbrevs (abbrevNum);  
   
   /* Write the .debug_info section */
   dwWriteTags ();
